# vorago-rs

./: .gitlab-ci.yml  README.md  justfile
tools/va108xx-flashloader-client/: Cargo.toml  README.md
tools/va108xx-flashloader-client/src/: elf.rs  flash.rs  main.rs  tc.rs
va108xx/: .gitignore  Cargo.toml  Embed.toml.template  NOTICE  README.md  jlink-gdb.sh  rust-toolchain.toml
va108xx/.cargo/: config.toml.template
va108xx/automation/: Jenkinsfile
va108xx/board-tests/: Cargo.toml
va108xx/board-tests/src/: main.rs
va108xx/bootloader/: Cargo.toml  README.md
va108xx/bootloader/src/: lib.rs  main.rs
va108xx/examples/: README.md
va108xx/examples/embassy/: Cargo.toml
va108xx/examples/embassy/src/: lib.rs  main.rs
va108xx/examples/rtic/: Cargo.toml
va108xx/examples/rtic/src/: lib.rs  main.rs
va108xx/examples/simple/: Cargo.toml
va108xx/examples/simple/examples/: blinky-pac.rs  pwm.rs  spi.rs  uart.rs
va108xx/examples/simple/src/: main.rs
va108xx/flashloader/: Cargo.toml  README.md  image-loader.py  loader.toml  requirements.txt
va108xx/flashloader/models/: Cargo.toml
va108xx/flashloader/models/src/: lib.rs
va108xx/flashloader/slot-a-blinky/: Cargo.toml  memory.x
va108xx/flashloader/slot-a-blinky/src/: main.rs
va108xx/flashloader/slot-b-blinky/: .gitignore  Cargo.toml  memory.x
va108xx/flashloader/slot-b-blinky/src/: main.rs
va108xx/flashloader/src/: main.rs
va108xx/scripts/: VA108xx_Series.yaml  defmt-telnet.sh  memory_app_a.x  memory_app_b.x
va108xx/va108xx/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  device.x  gen-helper.sh
va108xx/va108xx-embassy/: CHANGELOG.md  Cargo.toml  README.md  docs.sh
va108xx/va108xx-embassy/src/: lib.rs
va108xx/va108xx-hal/: CHANGELOG.md  Cargo.toml  README.md
va108xx/va108xx-hal/src/: clock.rs  embassy_time.rs  i2c.rs  lib.rs  pins.rs  prelude.rs  pwm.rs  sysconfig.rs  time.rs  timer.rs
va108xx/va108xx-hal/src/gpio/: mod.rs
va108xx/va108xx-hal/src/spi/: mod.rs
va108xx/va108xx-hal/src/uart/: mod.rs
va108xx/va108xx/.github/workflows/: ci.yml
va108xx/va108xx/automation/: Jenkinsfile
va108xx/va108xx/src/: i2ca.rs  ioconfig.rs  irqsel.rs  lib.rs  porta.rs  spia.rs  sysconfig.rs  tim0.rs  uarta.rs  utility.rs
va108xx/va108xx/src/i2ca/: irq_enb.rs  perid.rs  rxcount.rs  s0_address.rs  s0_addressb.rs  s0_addressmask.rs  s0_addressmaskb.rs  s0_data.rs  s0_irq_enb.rs  s0_lastaddress.rs  s0_maxwords.rs  s0_rxcount.rs  s0_rxfifoirqtrg.rs  s0_state.rs  s0_status.rs  s0_txcount.rs  s0_txfifoirqtrg.rs  status.rs  tmconfig.rs  txfifoirqtrg.rs
va108xx/va108xx/src/ioconfig/: perid.rs  porta.rs
va108xx/va108xx/src/irqsel/: int_ram_sbe.rs  nmi.rs  perid.rs
va108xx/va108xx/src/porta/: datain.rs  datainbyte.rs  datamask.rs  datamaskbyte.rs  dataout.rs  edge_status.rs  irq_enb.rs  irq_raw.rs  irq_sen.rs  perid.rs
va108xx/va108xx/src/spia/: clkprescale.rs  data.rs  fifo_clr.rs  perid.rs  status.rs
va108xx/va108xx/src/sysconfig/: ef_config.rs  ef_id.rs  ioconfig_clkdiv.rs  ioconfig_clkdiv0.rs  irq_enb.rs  lockup_reset.rs  peripheral_clk_enable.rs  peripheral_reset.rs  procid.rs  ram_sbe.rs  refresh_config.rs  rom_prot.rs  rom_retries.rs  rom_trap_addr.rs  rom_trap_synd.rs  rst_stat.rs  tim_clk_enable.rs  tim_reset.rs
va108xx/va108xx/src/tim0/: csd_ctrl.rs  ctrl.rs  perid.rs  pwm_value.rs  pwma_value.rs
va108xx/va108xx/src/uarta/: addr9.rs  addr9mask.rs  clkscale.rs  fifo_clr.rs  rxfifoirqtrg.rs  rxfifortstrg.rs  rxstatus.rs  state.rs
va108xx/va108xx/src/utility/: synd_check_32_52_data.rs  synd_check_32_52_synd.rs  synd_check_32_data.rs  synd_check_32_synd.rs  synd_check_64_data0.rs  synd_check_64_data1.rs  synd_check_64_synd.rs  synd_data0.rs  synd_data1.rs  (+4 more)
va108xx/va108xx/svd/: va108xx-orig.svd  va108xx-patch.yml  va108xx.svd  va108xx.svd.patched
va108xx/vorago-reb1/: CHANGELOG.md  Cargo.toml  NOTICE  README.md
va108xx/vorago-reb1/examples/: adt75-temp-sensor.rs  adxl343-accelerometer.rs  blinky-button-irq.rs  blinky-leds.rs  max11619-adc.rs  nvm.rs
va108xx/vorago-reb1/src/: button.rs  leds.rs  lib.rs  m95m01.rs  max11619.rs  temp_sensor.rs
va108xx/vscode/: launch.json  settings.json  tasks.json
va416xx/: .gitignore  Cargo.toml  Embed.toml.template  NOTICE  README.md  jlink-gdb.sh  memory.x  rust-toolchain.toml
va416xx/.cargo/: config.toml.template
va416xx/automation/: Dockerfile  Jenkinsfile
va416xx/bootloader/: Cargo.toml  README.md
va416xx/bootloader/src/: main.rs
va416xx/examples/: README.md
va416xx/examples/embassy/: Cargo.toml
va416xx/examples/rtic/: Cargo.toml
va416xx/examples/simple/: Cargo.toml
va416xx/flashloader/: Cargo.toml  README.md  image-loader.py  loader.toml  requirements.txt
va416xx/flashloader/slot-a-blinky/: Cargo.toml  memory.x
va416xx/flashloader/slot-b-blinky/: Cargo.toml  memory.x
va416xx/flashloader/src/: main.rs
va416xx/jlink/: JLinkSettings.JLinkScript  jlink.gdb
va416xx/scripts/: defmt-telnet.sh  jlink-gdb-ram.sh  memory.x  memory_app_a.x  memory_app_b.x  prep-flash.gdb  prep-flash.sh
va416xx/scripts/can-clk-calc/: Cargo.toml
va416xx/va416xx/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  device.x  gen-helper.sh
va416xx/va416xx-embassy/: CHANGELOG.md  Cargo.toml  README.md
va416xx/va416xx-embassy/src/: lib.rs
va416xx/va416xx-hal/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  docs.sh
va416xx/va416xx-hal/jlink/: jlink.gdb
va416xx/va416xx-hal/src/: adc.rs  clock.rs  dac.rs  dma.rs  edac.rs  i2c.rs  irq_router.rs  lib.rs  nvm.rs  prelude.rs  pwm.rs  spi.rs  timer.rs  wdt.rs
va416xx/va416xx/automation/: Dockerfile  Jenkinsfile
va416xx/va416xx/src/: adc.rs  can0.rs  clkgen.rs  dac0.rs  dma.rs  eth.rs  i2c0.rs  ioconfig.rs  irq_router.rs  lib.rs  porta.rs  spi0.rs  spw.rs  sysconfig.rs  tim0.rs  trng.rs  utility.rs  watch_dog.rs
va416xx/va416xx/svd/: va416xx-patch.yml  va416xx.svd.patched
va416xx/vorago-peb1/: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  memory.x
va416xx/vorago-peb1/jlink/: jlink-reva.gdb
va416xx/vorago-peb1/src/: lib.rs
va416xx/vscode/: extensions.json  launch.json  tasks.json
(+515 files in other folders)
