[workspace]
resolver = "3"
members = [
  "vorago-reb1",
  "va108xx",
  "va108xx-hal",
  "examples/simple",
  "examples/rtic",
  "examples/embassy",
  "board-tests",
  "bootloader",
  "flashloader",
  "flashloader/models",
]
exclude = [
  "flashloader/slot-a-blinky",
  "flashloader/slot-b-blinky",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
# 1 instead of 0, the flashloader is too larger otherwise..
# opt-level = 1         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[profile.small]
inherits = "release"
codegen-units = 1
debug-assertions = false # <-
lto = true
opt-level = 'z'            # <-
overflow-checks = false  # <-
strip = true  # Automatically strip symbols from the binary.

[patch.crates-io]
spacepackets = { git = "https://egit.irs.uni-stuttgart.de/rust/spacepackets.git", rev = "ec952b771cc62a371786cb1a04fd1baa9c33523c" }
