[workspace]
resolver = "2"
members = [
  "va416xx",
  "va416xx-hal",
  "va416xx-embassy",
  "vorago-peb1",
  "bootloader",
  "flashloader",
  "examples/simple",
  "examples/embassy",
  "examples/rtic",
]
exclude = [
  "flashloader/slot-a-blinky",
  "flashloader/slot-b-blinky",
]

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
# This is problematic for stepping..
# opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[profile.small]
inherits = "release"
codegen-units = 1
debug-assertions = false # <-
lto = true
opt-level = 'z'            # <-
overflow-checks = false  # <-
strip = true  # Automatically strip symbols from the binary.
