[package]
name = "va108xx-image-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
fern = "0.7"
object = "0.39"
humantime = "2"
crc = "3"
log = "0.4"
toml = "1.1.2+spec-1.1.0"
anyhow = "1"
serialport = "4"
cobs = "0.5"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
spacepackets = { version = "0.17" }
tmtc-utils = { git = "https://egit.irs.uni-stuttgart.de/rust/tmtc-utils.git", version = "0.1" }

models = { path = "../../va108xx/flashloader/models" }
