[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["defmt"] }
crc = "3"
num_enum = { version = "0.7", default-features = false }
static_assertions = "1"

[dependencies.va108xx-hal]
version = "0.12"
path = "../va108xx-hal"
features = ["defmt"]

[dependencies.vorago-reb1]
version = "0.9"
path = "../vorago-reb1"

[features]
default = []
rtt-panic = []
