[package]
name = "flashloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embedded-io = "0.6"
defmt = "1"
defmt-rtt = { version = "1" }
panic-probe = { version = "1", features = ["print-defmt"] }
num_enum = { version = "0.7", default-features = false }
cobs = { version = "0.4", default-features = false }
satrs = { version = "0.3.0-alpha.1", default-features = false }
ringbuf = { version = "0.4.7", default-features = false, features = ["portable-atomic"] }
spacepackets = { version = "0.15", default-features = false, features = ["defmt"] }
# Even though we do not use this directly, we need to activate this feature explicitely
# so that RTIC compiles because thumv6 does not have CAS operations natively.
portable-atomic = {version = "1", features = ["unsafe-assume-single-core"]}

rtic = { version = "2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }

[dependencies.va108xx-hal]
version = "0.12"
path = "../va108xx-hal"
features = ["defmt"]

[dependencies.vorago-reb1]
version = "0.9"
path = "../vorago-reb1"

[package.metadata.cargo-machete]
ignored = ["portable-atomic", "cortex-m-rt"]
