[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["defmt"] }
crc = "3"
static_assertions = "1"

[dependencies.va416xx-hal]
version = "0.6"
features = ["va41630", "defmt"]
path = "../va416xx-hal"
