[package]
name = "flashloader"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
embedded-io = "0.6"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["defmt"] }
static_cell = "2"
satrs = { version = "0.3.0-alpha.1", default-features = false }
ringbuf = { version = "0.4", default-features = false }
once_cell = { version = "1", default-features = false, features = ["critical-section"] }
spacepackets = { version = "0.15", default-features = false, features = ["defmt"] }
cobs = { version = "0.4", default-features = false }

va416xx-hal = { version = "0.6", features = ["va41630", "defmt"], path = "../va416xx-hal" }

rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }
