[package]
name = "va416xx-hal"
version = "0.6.0"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2021"
description = "HAL for the Vorago VA416xx family of MCUs"
homepage = "https://egit.irs.uni-stuttgart.de/rust/va416xx-rs"
repository = "https://egit.irs.uni-stuttgart.de/rust/va416xx-rs"
license = "Apache-2.0"
keywords = ["no-std", "hal", "cortex-m", "vorago", "va416xx"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
va416xx = { version = "0.5", features = ["critical-section"], default-features = false }
derive-mmio = "0.6.1"
static_assertions = "1.1"
vorago-shared-hal = { version = "0.2", features = ["vor4x"] }

libm = "0.2"
nb = "1"
embedded-hal = "1"
num_enum = { version = "0.7", default-features = false }
bitflags = "2"
bitbybit = "1.3"
arbitrary-int = "2"
fugit = "0.3"
embedded-can = "0.4"
embassy-sync = "0.7"
thiserror = { version = "2", default-features = false }

defmt = { version = "1", optional = true }

[features]
default = ["rt", "revb"]
rt = ["va416xx/rt"]
alloc = []
defmt = ["dep:defmt", "fugit/defmt", "vorago-shared-hal/defmt"]

va41630 = ["device-selected"]
va41620 = ["device-selected"]

va41629 = ["device-selected"]
va41628 = ["device-selected", "vorago-shared-hal/va41628"]

device-selected = []
revb = []

[package.metadata.docs.rs]
features = ["va41630", "defmt"]
rustdoc-args = ["--generate-link-to-definition"]
