[package]
name = "vorago-peb1"
version = "0.1.3"
authors = ["Robin Mueller <muellerr@irs.uni-stuttgart.de>"]
edition = "2021"
description = "Board Support Crate for the Vorago PEB1 development board"
homepage = "https://egit.irs.uni-stuttgart.de/rust/vorago-peb1"
repository = "https://egit.irs.uni-stuttgart.de/rust/vorago-peb1"
license = "Apache-2.0"
keywords = ["no-std", "peb1", "cortex-m", "vorago", "va416xx"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
va416xx-hal = { version = "0.6", path = "../va416xx-hal", features = ["va41630"] }
lis2dh12 = { version = "0.7", features = ["out_f32"] }

[features]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]
