[package]
name = "rtic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embedded-io = "0.7"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["defmt"] }
fugit = "0.4"
rtic = { version = "2", features = ["thumbv6-backend"] }
rtic-monotonics = { version = "2", features = ["cortex-m-systick"] }
ringbuf = { version = "0.5", default-features = false, features = ["portable-atomic"] }

va108xx-hal = { version = "0.13", path = "../../va108xx-hal" }
vorago-reb1 = { version = "0.10", path = "../../vorago-reb1" }
