[package]
name = "simple-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
panic-halt = "1"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["defmt"] }
embedded-hal = "1"
embedded-hal-nb = "1"
embedded-io = "0.6"
portable-atomic = { version = "1", features = ["unsafe-assume-single-core"] }

[dependencies.va108xx-hal]
version = "0.12"
path = "../../va108xx-hal"
features = ["defmt"]
