[package]
name = "embassy-example"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cfg-if = "1"
embedded-io = "0.6"
embedded-hal-async = "1"
embedded-io-async = "0.6"

heapless = "0.9"
defmt-rtt = "1"
defmt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"
critical-section = "1"
ringbuf = { version = "0.4", default-features = false }

nb = "1"
embassy-sync = "0.7"
embassy-time = "0.5"
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt"
]}

va416xx-hal = { version = "0.6", path = "../../va416xx-hal", features = ["defmt"] }
va416xx-embassy = { version = "0.1", path = "../../va416xx-embassy", default-features = false }

[features]
default = ["ticks-hz-1_000", "va416xx-embassy/irq-tim14-tim15"]
custom-irqs = []
ticks-hz-1_000 = ["embassy-time/tick-hz-1_000"]
ticks-hz-32_768 = ["embassy-time/tick-hz-32_768"]

[package.metadata.cargo-machete]
ignored = ["cortex-m-rt"]
